Add Excel export for project schedule and printer icon
Introduces an Excel (.xlsx) export feature for the project schedule using Apache POI, accessible via a new printer button in the ProjectExpandView. Updates the controller to handle Excel generation, adjusts status toggle logic for reliability, and adds the required POI dependencies and JVM module flags. Also includes a new printer icon resource and minor FXML layout changes.